<?xml version="1.0"?>
<package format="2">
  <name>bob_mavros_navigation</name>
  <version>0.0.0</version>
  <description>The bob_mavros_navigation package</description>
  <maintainer email="a.dewar@sussex.ac.uk">Alex Dewar</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
